<resources>
    <string name="app_name">KANSOUBUNKO</string>
    <string name="login_name">名前:</string>
    <string name="login_pass">パスワード:</string>
    <string name="login_login">ログイン</string>
    <string name="login_regist">登録</string>
    <string name="regist_book_log">感想文を記入する</string>
    <string name="regist_book_update_log">感想文を登録する</string>
    <string name="list_count_finish">感想件数 ：</string>
    <string name="list_search"> 検索 ：</string>
    <string name="list_regist">新しい本を登録する</string>
    <string name="no_book_img">picture</string>
    <string name="regist_book_ok">OK</string>
    <string name="regist_book_cancel">CANCEL</string>
    <string name="regist_book_review">感想を記入してください。(100字以内)</string>
    <string name="regist_book_title_dialog">タイトルを記入してください。</string>
    <string name="regist_title_error_mrssage">タイトルが空欄です。</string>
    <string name="regist_book_title">タイトルを記入する</string>
    <string name="book_default_title">タイトル</string>
    <string name="setting_edit_button">プロフィールを編集する</string>
    <string name="setting_follow">フォロー</string>
    <string name="setting_follow_delete">フォロー解除</string>
    <string name="login_error_message">名前とパスワードを入力してください。</string>
    <string name="login_login_error_message">名前またはパスワードが正しくありません。</string>
    <string name="login_regist_same_name_error_message">入力された名前はすでに使用されています。</string>
    <string name="login_length_error_message">20文字以内で入力してください。</string>
</resources>
