<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kansoubunko.kiyota.kansoubunko.activity.LoginActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/login_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="280dp"
                        android:layout_height="160dp"
                        android:src="@drawable/title" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_pen" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical">

                    <EditText
                        android:layout_width="200dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="22dp"
                        android:background="@color/clear_white"
                        android:hint="@string/login_name"
                        android:textColor="@color/black" />

                    <EditText
                        android:layout_width="200dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/clear_white"
                        android:hint="@string/login_pass"
                        android:textColor="@color/black" />

                    <LinearLayout
                        android:layout_width="260dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="36dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/login_login"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="8dp"
                            android:layout_weight="1"
                            android:background="@drawable/shape_login_button"
                            android:text="@string/login_login"
                            android:textColor="@drawable/change_login_text_color" />

                        <Button
                            android:id="@+id/login_regist"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="4dp"
                            android:layout_weight="1"
                            android:background="@drawable/shape_login_button"
                            android:text="@string/login_regist"
                            android:textColor="@drawable/change_login_text_color" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>


    </FrameLayout>

</android.support.constraint.ConstraintLayout>
