<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/layout_title"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/regist" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="3.5"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/regist_book_img"
                    android:layout_width="120dp"
                    android:layout_height="160dp"
                    android:layout_gravity="center"
                    android:src="@drawable/no_book_img" />

                <TextView
                    android:id="@+id/regist_book_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="6dp"
                    android:gravity="center"
                    android:text="@string/regist_book_title"
                    android:textColor="@color/white"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="180dp"
                    android:layout_height="0.6dp"
                    android:layout_gravity="center"
                    android:background="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:orientation="vertical">

                <GridView
                    android:id="@+id/regist_book_review"
                    android:layout_width="300dp"
                    android:layout_height="242dp"
                    android:layout_gravity="center_horizontal"
                    android:numColumns="10"></GridView>

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp">

                    <Button
                        android:id="@+id/regist_book_review_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="@drawable/shape_regist_button"
                        android:paddingLeft="14dp"
                        android:paddingRight="14dp"
                        android:text="@string/regist_book_log"
                        android:textColor="@drawable/change_login_text_color"
                        android:textSize="18dp" />

                    <Button
                        android:id="@+id/regist_book_review_update_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="@drawable/shape_regist_button"
                        android:paddingLeft="14dp"
                        android:paddingRight="14dp"
                        android:text="@string/regist_book_update_log"
                        android:textColor="@drawable/change_login_text_color"
                        android:textSize="18dp"
                        android:visibility="gone" />
                </RelativeLayout>
            </FrameLayout>
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>