<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/layout_title"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/setting" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="40dp"
                                android:layout_marginLeft="20dp"
                                android:layout_marginRight="20dp"
                                android:src="@drawable/set_name" />

                            <TextView
                                android:id="@+id/setting_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:textColor="@color/clear_white"
                                android:textSize="18dp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="40dp"
                                android:layout_marginLeft="20dp"
                                android:layout_marginRight="20dp"
                                android:src="@drawable/set_birthday" />

                            <TextView
                                android:id="@+id/setting_birthday"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:textColor="@color/clear_white"
                                android:textSize="18dp" />
                        </LinearLayout>
                    </LinearLayout>

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4">

                        <ImageView
                            android:id="@+id/setting_user_image"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_sample_user_image" />

                        <TextView
                            android:id="@+id/setting_user_image_gray_cover"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:background="@color/gauge_init_color" />

                        <ImageView
                            android:id="@+id/setting_user_image_button"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_add_image" />

                    </FrameLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:layout_weight="6">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="46dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:src="@drawable/set_follow" />

                        <TextView
                            android:id="@+id/setting_follow"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textColor="@color/clear_white"
                            android:textSize="18dp" />

                    </LinearLayout>

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <Button
                                android:id="@+id/follow_delete_button"
                                android:layout_width="wrap_content"
                                android:layout_height="30dp"
                                android:layout_centerInParent="true"
                                android:background="@drawable/shape_follow_delete_button"
                                android:elevation="10dp"
                                android:gravity="center"
                                android:paddingLeft="20dp"
                                android:paddingRight="20dp"
                                android:text="@string/setting_follow_delete"
                                android:textColor="@color/black"
                                android:textSize="20dp"
                                android:visibility="gone" />

                            <Button
                                android:id="@+id/follow_button"
                                android:layout_width="wrap_content"
                                android:layout_height="30dp"
                                android:layout_centerInParent="true"
                                android:background="@drawable/shape_follow_button"
                                android:elevation="10dp"
                                android:gravity="center"
                                android:paddingLeft="20dp"
                                android:paddingRight="20dp"
                                android:text="@string/setting_follow"
                                android:textColor="@color/white"
                                android:textSize="20dp" />

                        </RelativeLayout>
                    </FrameLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="46dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:src="@drawable/set_followers" />

                    <TextView
                        android:id="@+id/setting_followers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/clear_white"
                        android:textSize="18dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="46dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:src="@drawable/set_profile" />

                    <TextView
                        android:id="@+id/setting_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/clear_white"
                        android:textSize="18dp" />
                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/left_arrow"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:layout_toLeftOf="@+id/setting_book_image"
                    android:gravity="center"
                    android:text="◁"
                    android:textColor="@color/white"
                    android:textSize="30dp" />

                <ImageView
                    android:id="@+id/setting_book_image"
                    android:layout_width="130dp"
                    android:layout_height="170dp"
                    android:layout_centerInParent="true" />

                <TextView
                    android:id="@+id/right_arrow"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@+id/setting_book_image"
                    android:gravity="center"
                    android:text="▷"
                    android:textColor="@color/white"
                    android:textSize="30dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/setting_edit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/shape_login_button"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/setting_edit_button"
                    android:textColor="@drawable/change_login_text_color"
                    android:textSize="20dp" />

            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>